# avr-clock

./: .travis.yml  CMakeLists.txt  README.rst  platformio.ini  rotate.py
src/: adc.c  adc.h  clock.c  clock.h  digits.c  digits.h  ds3231.c  ds3231.h  main.c  max72xx.c  max72xx.h  sleep.c  sleep.h  spi.c  spi.h  timer.c  timer.h  twi.c  uart.c  uart.h  watchdog.c  watchdog.h
